checking overflow bug

--- a/getStarted.css
+++ b/getStarted.css
@@ -39,15 +39,13 @@
 .resume-inputs {
   display: flex;
   flex-wrap: wrap;
+  height: 62%;
+  overflow: hidden;
   gap: 15px;
   row-gap: 6vh;
+  transition: height 0.5s;
 }
 
-.dropdown {
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.5s, margin 0.6s;
-}
 
 .input-container {
   flex: 1 1 calc(50% - 8px);
@@ -65,6 +63,7 @@
 
 .label {
   display: inline-block;
+  margin-bottom: 5px;
   white-space: nowrap;
   width: 104px;
   color: rgb(130,139,162);
@@ -96,7 +95,7 @@
 .add-more-button {
   display: block;
   background-color: transparent;
-  margin-top: 40px;
+  margin-top: 20px;
   color: rgb(26,145,240);
   border: none;
   font-size: 16px;
